Fixes the avatar display on mobile the photo page

--- a/app/assets/stylesheets/mobile/mobile.scss
+++ b/app/assets/stylesheets/mobile/mobile.scss
@@ -278,7 +278,7 @@ footer {
   font-size: larger;
   text-align: center;
 
-  img {
+  img:not(.avatar) {
     max-width: 100%;
   }
 
